--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header></header>
 
-    <script src="./js/classModal.js"></script>
+    <script src="./js/classVisit.js" type="module"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
