--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="body">
   <header>
     <nav class="navbar color">
-      <div class="container-fluid">
+      <div class="container-fluid container">
         <a class="navbar-brand">
           <img src="./img/logo.png" class="logo">
         </a>
@@ -20,25 +20,29 @@
       </div>
     </nav>
   </header>
-  <div class="search">
+  
+  <div id="root" class="container"></div>
+
+
+  <!-- <div class="search">
     <input type="text" class="form-control mt-5 w-25 p-3 mb-4 ms-5" name="q" id="search" placeholder="Search">
-    <select class="form-select form-select-lg mb-4 w-25 p-2 bg-light ms-5 mt-5" aria-label=".form-select-lg example">
+    <select class="form-select form-select-lg mb-4 w-25 p-2 bg-light ms-5 mt-5" aria-label=".form-select-sm example">
       <option selected>All</option>
       <option value="1">Open</option>
       <option value="2">Done</option>
     </select>
 
-    <select class="form-select form-select-lg mb-4 w-25 p-2 bg-light ms-5 mt-5" aria-label=".form-select-lg example">
+    <select class="form-select form-select-lg mb-4 w-25 p-2 bg-light ms-5 mt-5" aria-label=".form-select-sm example">
       <option selected>All</option>
       <option value="1">Hight</option>
       <option value="2">Normal</option>
       <option value="3">Low</option>
     </select>
     <button type="button" class="btn w-12 p-1 ms-5 mt-3" style="color:#CB9696">Search</button>
-  </div>
+  </div> -->
 
   <!-- Модальный (содержит форму регистрации) -->
-  <div id="id01" class="modal">
+  <!-- <div id="id01" class="modal">
     <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Закрыть модальный">
       <img src="./img/logo.png"></span>
     <form class="modal-content" action="/action_page.php">
@@ -67,7 +71,7 @@
 
     </form>
   </div>
-  </div>
+  </div> -->
 
   <hr class="line">
   <div class="card_position">
@@ -98,6 +102,7 @@
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
   <script src="app.js"></script>
+  <script src="./js/createSearch.js"></script>
   <script async="" type="text/javascript" src="http://yandex.st/jquery/2.0.3/jquery.js"></script>
 </body>
 </html>
