--- a/index.html
+++ b/index.html
@@ -10,68 +10,17 @@
 <body class="body">
   <header>
     <nav class="navbar color">
-      <div class="container-fluid container">
+      <div class="container-fluid">
         <a class="navbar-brand">
           <img src="./img/logo.png" class="logo">
         </a>
         <form>
-          <button onclick="document.getElementById('id01').style.display='block'"
-            class="registration">Registration</button>
+          <button class="registration">Registration</button>
       </div>
     </nav>
   </header>
   
   <div id="root" class="container"></div>
-
-
-  <!-- <div class="search">
-    <input type="text" class="form-control mt-5 w-25 p-3 mb-4 ms-5" name="q" id="search" placeholder="Search">
-    <select class="form-select form-select-lg mb-4 w-25 p-2 bg-light ms-5 mt-5" aria-label=".form-select-sm example">
-      <option selected>All</option>
-      <option value="1">Open</option>
-      <option value="2">Done</option>
-    </select>
-
-    <select class="form-select form-select-lg mb-4 w-25 p-2 bg-light ms-5 mt-5" aria-label=".form-select-sm example">
-      <option selected>All</option>
-      <option value="1">Hight</option>
-      <option value="2">Normal</option>
-      <option value="3">Low</option>
-    </select>
-    <button type="button" class="btn w-12 p-1 ms-5 mt-3" style="color:#CB9696">Search</button>
-  </div> -->
-
-  <!-- Модальный (содержит форму регистрации) -->
-  <!-- <div id="id01" class="modal">
-    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Закрыть модальный">
-      <img src="./img/logo.png"></span>
-    <form class="modal-content" action="/action_page.php">
-      <div class="colors">
-        <div class="container ">
-          <h1>Registration</h1>
-          <p>Please fill out this form to create an account.</p>
-          <hr>
-          <label for="email"><b>Email</b></label>
-          <input type="text" placeholder="Введите вашу почту" name="email" required>
-
-          <label for="psw"><b>Password</b></label>
-          <input type="password" placeholder="Введите пароль" name="psw" required>
-
-          <label for="psw-repeat"><b>Repeat the password</b></label>
-          <input type="password" placeholder="Повторите пароль" name="psw-repeat" required>
-
-          <div class="clearfix">
-            <button type="submit" class="signup cancelbtn">Registration</button>
-            </br>
-            </br>
-            <button type="button" onclick="document.getElementById('id01').style.display='none'"
-              class="cancelbtn">Close</button>
-          </div>
-        </div>
-
-    </form>
-  </div>
-  </div> -->
 
   <hr class="line">
   <div class="card_position">
@@ -101,8 +50,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
+
+
   <script src="app.js"></script>
+  <script src="./js/main2344.js"></script>
   <script src="./js/createSearch.js"></script>
-  <script async="" type="text/javascript" src="http://yandex.st/jquery/2.0.3/jquery.js"></script>
+
+  <!-- <script async="" type="text/javascript" src="http://yandex.st/jquery/2.0.3/jquery.js"></script> -->
+
 </body>
 </html>
