--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
   <script src="app.js"></script>
   <script src="./js/main2344.js"></script>
+  <script src="././js/classVisit.js"></script>
   <script src="./js/createSearch.js"></script>
 
   <!-- <script async="" type="text/javascript" src="http://yandex.st/jquery/2.0.3/jquery.js"></script> -->
