--- a/index.html
+++ b/index.html
@@ -2,42 +2,66 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="./css/main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IDoctor</title>
+  <title>1IDoctor</title>
 </head>
 
 <body class="body">
+
   <header>
     <nav class="navbar color">
       <div class="container-fluid">
         <a class="navbar-brand">
           <img src="./img/logo.png" class="logo">
         </a>
-        <form>
-          <button onclick="document.getElementById('id01').style.display='block'"
-            class="registration">Registration</button>
+        <button id="login"class="registration">Login</button>
       </div>
     </nav>
   </header>
-  <div class="search">
-    <input type="text" class="form-control mt-5 w-25 p-3 mb-4 ms-5" name="q" id="search" placeholder="Search">
-    <select class="form-select form-select-lg mb-4 w-25 p-2 bg-light ms-5 mt-5" aria-label=".form-select-lg example">
-      <option selected>All</option>
-      <option value="1">Open</option>
-      <option value="2">Done</option>
-    </select>
+  
+  <div id="root" class="container"></div>
 
-    <select class="form-select form-select-lg mb-4 w-25 p-2 bg-light ms-5 mt-5" aria-label=".form-select-lg example">
-      <option selected>All</option>
-      <option value="1">Hight</option>
-      <option value="2">Normal</option>
-      <option value="3">Low</option>
-    </select>
-    <button type="button" class="btn w-12 p-1 ms-5 mt-3" style="color:#CB9696">Search</button>
+  <button id="btn_modal_window">Create</button>
+
+  <div id="my_modal" class="modal">
+    <div class="modal_content">
+      <span class="close_modal_window">
+        <img src="./img/cansel.png" class="cansel">
+      </span>
+      <h1 class="card">Card</h1>
+
+      <form id="create_card">
+        <input type="text" placeholder="First name" id="clients_name" name="clients_name" />
+        <input type="text" placeholder="Age" id="clients_age" name="clients_age" />
+        <input type="text" placeholder="Weight" id="clients_weight" name="clients_weight" />
+        <input type="text" placeholder="Pressure" id="clients_pressure" name="clients_pressure" />
+        <input type="text" placeholder="Past diseases of the cardiovascular system" id="clients_disease" name="clients_disease" />
+
+
+        <h3 class="visit_position">Останній візит</h3>
+        <input type="date" placeholder="Day of last visit" id="last_visit" name="last_visit" />
+        <input type="text" placeholder="Information" id="clients_information" name="clients_information" />
+        <select id="type_of_doctor">
+          <option>Лікар</option>
+          <option value="cardiologist">Кардіолог</option>
+          <option value="dantist">Стоматолог</option>
+          <option value="practithion">Терапевт</option>
+        </select>
+      </br>
+        <select id="type_of_priority">
+          <option>Пріорітет</option>
+          <option value="usual">Звичайний</option>
+          <option value="priority">Пріорітетний</option>
+          <option value="pressing">Невідкладний</option>
+        </select>
+      </br>
+        <input type="submit" value="Send" id="button_send" />
+      </form>
+    </div>
   </div>
 
-  <!-- Модальный (содержит форму регистрации) -->
+  <!-- Модальный (содержит форму регистрации)
   <div id="id01" class="modal">
     <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Закрыть модальный">
       <img src="./img/logo.png"></span>
@@ -66,69 +90,7 @@
         </div>
 
     </form>
-  </div>
-  </div>
-
-  <hr class="line">
-  <div class="card_position">
-    <div class="card" style="width: 18rem;">
-      <div class="card-body">
-        <h5 class="card-title">Картка пацієнта</h5>
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" placeholder="Name" aria-label="Username">
-        </div>
-        <select class="form-select form-select-lg mb-4 w-27 p-2 bg-light" aria-label=".form-select-lg example">
-          <option selected>Лікар</option>
-          <option value="1">Кардіолог</option>
-          <option value="2">Стоматолог</option>
-          <option value="3">Терапевт</option>
-        </select>
-        <button>Редагувати</button>
-      </div>
-    </div>
-  </div>
-
-
-  <button id="btn_modal_window">Create</button>
-  <div id="my_modal" class="modal">
-    <div class="modal_content">
-      <span class="close_modal_window">
-        <img src="./img/cansel.png" class="cansel">
-      </span>
-      <h1 class="card">Card</h1>
-      <form id="create_card" onsubmit="create_card(event)">
-        <input type="text" placeholder="First name" id="clients_name" name="clients_name" />
-        <input type="text" placeholder="Age" id="clients_age" name="clients_age" />
-        <input type="text" placeholder="Weight" id="clients_weight" name="clients_weight" />
-        <input type="text" placeholder="Pressure" id="clients_pressure" name="clients_pressure" />
-        <input type="text" placeholder="Past diseases of the cardiovascular system" id="clients_disease" name="clients_disease" />
-
-
-        <h3 class="visit_position">Останній візит</h3>
-        <input type="date" placeholder="Day of last visit" id="last_visit" name="last_visit" />
-        <input type="text" placeholder="Information" id="clients_information" name="clients_information" />
-        <select id="type_of_doctor">
-          <option>Лікар</option>
-          <option value="cardiologist">Кардіолог</option>
-          <option value="dantist">Стоматолог</option>
-          <option value="practithion">Терапевт</option>
-        </select>
-      </br>
-        <select id="type_of_priority">
-          <option>Пріорітет</option>
-          <option value="usual">Звичайний</option>
-          <option value="priority">Пріорітетний</option>
-          <option value="pressing">Невідкладний</option>
-        </select>
-      </br>
-        <input type="submit" value="Send" id="button_send"/>
-      </form>
-    </div>
-  </div>
-
-<div id="container_card">
-
-</div>
+  </div> -->
 
 <footer>
     Copyright © 2010-2021 ТОВ «Асоціація незалежних розробників»
@@ -139,8 +101,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
-  <script src="js/registration.js"></script>
-  <script src="js/card.js"></script>
+
+  <script src="./js/registration.js"></script>
+
+  <script src="./js/createSearch.js"></script>
+  <script src="./js/card.js"></script>
   <script async="" type="text/javascript" src="http://yandex.st/jquery/2.0.3/jquery.js"></script>
 </body>
 </html>
