--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/AutorizationOptins.js" type="modul"></script>
+    <script src="./js/AutorizationOptins.js" type="module"></script>
     <script src="./js/classVisit.js" type="module"></script>
     <script src="./js/createSearch.js" type="module"></script>
     <script src="./js/filter.js" type="module"></script>
